# cits3003_project

./: .gitignore  CITS3003 Computer Graphics and Animation.html  CMakeLists.txt  README.md
config/: imgui.ini
res/shaders/animated_entity/: frag.glsl  vert.glsl
res/shaders/common/: lights.glsl
res/shaders/emissive_entity/: vert.glsl
res/shaders/entity/: frag.glsl  vert.glsl
src/: main.cpp
src/rendering/cameras/: PanningCamera.cpp
src/rendering/renders/: AnimatedEntityRenderer.cpp
src/rendering/renders/shaders/: BaseLitEntityShader.cpp  BaseLitEntityShader.h
src/rendering/scene/: Lights.cpp  Lights.h  MasterRenderScene.cpp  MasterRenderScene.h
src/scene/: EditorScene.cpp
src/scene/editor_scene/: DirectionalLightElement.cpp  DirectionalLightElement.h  SceneElement.cpp
